# Ariadne

./: .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bump-version.py  extract-release-notes.py  index.js  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: ----.md  bug---.md  bug--bug---.md  bug.md  doc.md  docs------.md  feature------.md  feature.md
.github/PULL_REQUEST_TEMPLATE/: change.md  doc.md
.github/actions/update-changelog/: action.yml
.github/workflows/: api-docs.yml  api_docs.yml  cf-deploy.yml  cf-preview-deploy.yml  deploy-docs.yml  mk-env.yml  publish.yml  release-to-pypi.yml  release.yml
dev_utils/: build_docs.py  fetch-alconna-latest.py  show-deps.py
docs/: NAV.md  adapter.html  app.html  config.md  context.html  dispatcher.html  doc-search.html  exception.html  gen_ref.py  index.html  index.js  index.md  model.html  quickstart.md  requirements.txt  typing.html  util.html
docs/advance/: NAV.md  adapter.md  commander.md  msg-chain.md  twilight-old.md  twilight.md
docs/advance/alconna/: quickstart.md
docs/advance/broadcast/: depend.md  derive.md  interrupt.md
docs/appendix/: CHANGELOG.md  NAV.md  asyncio-intro.md  credits.md  faq.md  funding.md  mah-install.md
docs/ariadne/: adapter.html  app.html  context.html  dispatcher.html  index.html  model.html
docs/ariadne/entry/: message.html
docs/ariadne/event/: index.html  lifecycle.html  mirai.html  network.html
docs/ariadne/message/: chain.html  component.html  element.html  formatter.html  index.html
docs/ariadne/message/parser/: base.html  index.html  literature.html  pattern.html  twilight.html  util.html
docs/ariadne/util/: async_exec.html  index.html
docs/assets/: admonition.js  chat.css  curtain.css  extra.css
docs/basic/: NAV.md  background.md  base-parser.md  configuration.md  msg-chain.md  overview.md  params.md
docs/blog/: history.md  index.md  twilight.md
docs/elaina/talk/: NAV.md  hocon.md  imp_res.md
docs/entry/: event.html  index.html  message.html
docs/event/: index.html  lifecycle.html  message.html  mirai.html  network.html
docs/extra/: NAV.md  async-exec.md  console.md  cooldown.md  log.md  msg-chain-tool.md  scheduler.md
docs/extra/saya/: channel.md  cross-module.md  start.md
docs/graia/: index.html
docs/graia/ariadne/: adapter.html  app.html  context.html  dispatcher.html  exception.html  index.html  model.html  util.html
docs/graia/ariadne/event/: index.html  lifecycle.html  message.html  mirai.html  network.html
docs/graia/ariadne/message/: chain.html  element.html  index.html
docs/message/: chain.html  component.html  element.html  formatter.html  index.html
docs/message/parser/: base.html  index.html  literature.html  pattern.html  twilight.html  util.html
docs/migrate/: NAV.md  amnesia_port.md  cheatsheet.md  guide.md
docs/overrides/: main.html
docs/overrides/partials/: copyright.html  social.html
docs/util/: async_exec.html  index.html
document/: mkdocs.yml  pyproject.toml  requirements.txt
document/docs/: index.md  quickstart.md
document/docs/advance/: base-parser.md  commander.md  msg-chain.md  twilight.md
document/docs/advance/alconna/: construct-usage.md  examples.md  introduction.md  parameter.md  quickstart.md
document/docs/advance/broadcast/: depend.md  interrupt.md
document/docs/appendix/: CHANGELOG.md  asyncio-intro.md  credits.md  faq.md  mah-install.md
document/docs/assets/: admonition.js  chat.css  extra.css
document/docs/basic/: background.md  base-parser.md  configuration.md  instance.md  msg-chain.md  overview.md  params.md
document/docs/blog/: twilight.md
document/docs/extra/: console.md  log.md  msg-chain-tool.md  scheduler.md
document/docs/extra/saya/: channel.md  cross-module.md  start.md
document/docs/porting/: cheatsheet.md  guide.md
document/overrides/partials/: social.html
example/: reload-saya-test.py  reload-test.py
example/modules/: api.py
guide/: mkdocs.yml  requirements.txt
guide/docs/: TODO.md  credits.md  index.md  quickstart.md
guide/docs/advance/: alconna.md  base-parser.md  broadcast.md  custom-decorator.md  interrupt.md  literature.md  msg-chain-tool.md  msg-chain.md  twilight.md  twilight_old.md
guide/docs/advance/broadcast/: depend.md  interrupt.md
guide/docs/appendix/: CHANGELOG.md  asyncio-intro.md  credits.md  docker.md  faq.md  mah-install.md  terms.md
guide/docs/basic/: application.md  configuration.md  instance.md  log.md  msg-chain.md  param-type.md  quickstart.md  type-hint.md
guide/docs/blog/: twilight.md
guide/docs/extra/: async-exec.md  msg-chain-tool.md  scheduler.md
guide/docs/extra/saya/: start.md
guide/docs/porting/: cheatsheet.md
guide/docs/suite/: log.md  saya.md  scheduler.md
guide/docs/suite/saya/: channel.md  start.md
migrate_src/: migrator.py
src/graia/ariadne/: __init__.py  adapter.py  app.py  context.py  dispatcher.py  exception.py  instance.py  model.py  parser.py  service.py  typing.py  util.py
src/graia/ariadne/adapter/: __init__.py  forward.py  reverse.py  util.py
src/graia/ariadne/connection/: __init__.py  _info.py  config.py  connection.py  connector.py  http.py  util.py  ws.py
src/graia/ariadne/console/: __init__.py  saya.py
src/graia/ariadne/entry/: __init__.py  broadcast.py  event.py  message.py  saya.py  scheduler.py
src/graia/ariadne/event/: __init__.py  lifecycle.py  message.py  mirai.py  network.py
src/test/: adapter.py  alconna.py  app.py  async_exec.py  base_parser.py  interrupt.py  literature.py  message_chain.py  minimal.py  parser_performance.py  saya_test_main.py  tools.py  twilight.py
src/test/message/: chain.py
src/test_old/: adapter.py  alconna.py  app.py  base_parser.py  commander.py  commander_performance.py  deco.py  interrupt.py  literature.py  message_chain.py  minimal.py  parser.py  parser_performance.py  permission.py  saya_test_downstream.py  saya_test_main.py  tools.py  twilight.py
(+39 files in other folders)
