[tool.poetry]
name = "guide"
version = "1.0.0"
description = ""
authors = ["BlueGlassBlock <blueglassblock@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
